Productos small-mobile v1.0

--- a/css/main.css
+++ b/css/main.css
@@ -903,6 +903,132 @@ html {
   }
   /* ----------------INDEX=END----------------- */
 }
+/* ----------------PRODUCTOS=START----------------- */
+.main-productos {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(220, 220, 220);
+  overflow: hidden;
+}
+.main-productos__list-functions {
+  justify-content: start;
+  display: flex;
+  flex-direction: row;
+}
+.main-productos__list-functions--div {
+  justify-content: center;
+  align-items: center;
+  margin: 0 30px 5px 0;
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+}
+.main-productos__list-functions--div--text {
+  margin: 0;
+  padding: 0 5px 0 0;
+  font-size: 4vw;
+  font-weight: 600;
+  color: rgb(255, 251, 252);
+}
+.main-productos__list-functions--div--img {
+  width: 4vw;
+  color: rgb(255, 251, 252);
+}
+.main-productos__list-functions--div:hover h4 {
+  color: rgb(55, 106, 109);
+}
+.main-productos__list-functions--div:hover svg {
+  color: rgb(55, 106, 109);
+}
+.main-productos__section {
+  margin: 0 20px 20px 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(255, 251, 252);
+  border-radius: 15px;
+}
+.main-productos__section--ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  border-radius: 15px;
+}
+.main-productos__section--ul--li {
+  width: 100%;
+  border-bottom: 2px solid rgb(185, 185, 185);
+  background-color: rgb(255, 251, 252);
+}
+.main-productos__section--ul--li:hover {
+  background-color: rgb(240, 240, 240);
+}
+.main-productos__section--ul--li:active img {
+  background-color: rgb(229, 229, 229);
+}
+.main-productos__section--ul--li:active h2 {
+  padding: 5px 5px 0 5px;
+  font-size: 250%;
+}
+.main-productos__section--ul--li:active h4 {
+  padding: 5px 5px 0 5px;
+  font-size: 150%;
+}
+.main-productos__section--ul--li--a {
+  width: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+}
+.main-productos__section--ul--li--a--div {
+  height: 100%;
+  padding: 20px;
+  text-align: center;
+}
+.main-productos__section--ul--li--a--div--product-name {
+  font-size: 7vw;
+  font-weight: 300;
+  color: rgb(68, 133, 136);
+  margin: 0;
+  padding: 5px;
+}
+.main-productos__section--ul--li--a--product-price {
+  font-size: 4vw;
+  font-weight: 800;
+  color: rgb(55, 106, 109);
+  margin: 0;
+  padding: 5px;
+}
+.main-productos__section--ul--li--a--img {
+  width: 40%;
+  padding: 0 20px 0 0;
+  background-color: rgb(255, 251, 252);
+}
+.main-productos__section--button-mas {
+  font-size: 4vw;
+  margin: 0;
+  padding: 5px;
+  background-color: rgb(255, 251, 252);
+  border: 0;
+  border-radius: 0 0 15px 15px;
+}
+.main-productos__section--button-mas:hover {
+  background-color: rgb(240, 240, 240);
+  color: rgb(55, 106, 109);
+}
+.main-productos__section--button-mas:active {
+  text-decoration: underline;
+}
+.main-productos .first-product-li {
+  border-radius: 15px 15px 0 0;
+}
+.main-productos .first-product-li img {
+  border-radius: 15px 0 0 0;
+}
+
 @media (min-width: 992px) {
   /* ----------------PRODUCTOS=START----------------- */
   .main-productos {
