--- a/views/productos/productos.html
+++ b/views/productos/productos.html
@@ -120,7 +120,7 @@
     <!-- MAIN-(productos) = START -->
     <main class="main-productos">
         <h1 class="page-main-text">Productos</h1>
-        <div class="main-productos__list-functions col-lg-10">
+        <div class="main-productos__list-functions col-11 col-lg-10">
             <div class="main-productos__list-functions--div">
                 <h4 class="main-productos__list-functions--div--text">Ordenar por</h4>
                 <svg class="main-productos__list-functions--div--img" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
@@ -135,7 +135,7 @@
             </div>
         </div>
         <!-- SECTION-(productos) = START -->
-        <section class="main-productos__section col-lg-10">
+        <section class="main-productos__section col-11 col-lg-10">
             <!-- SECTION-(productos)-ul = START -->
             <ul class="main-productos__section--ul">
                 <!-- PRODUCTO 1 = START -->
@@ -206,7 +206,7 @@
                 <!-- PRODUCTO 6 = END -->
             </ul>
             <!-- SECTION-(productos)-ul = END -->
-            <button class="main-productos__section--button-mas" type="button">Ver Mas</button>
+            <button class="main-productos__section--button-mas" type="button">Ver Más</button>
         </section>
         <!-- SECTION-(productos) = END -->
     </main>
