--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,3 +1,123 @@
+/* ----------------PRODUCTOS=START----------------- */
+    .main-productos{
+        @include justali(center,center);
+        @include display (flex);
+        @include flex(col);
+        background-color: map-get($map: $paleta, $key: catorce);
+        overflow: hidden;
+        &__list-functions{
+            justify-content: start;
+            @include display(flex);
+            @include flex(row);
+            &--div{
+                @include justali (center, center);
+                @include mar(0 30px 5px 0);
+                @include display (flex);
+                @include flex(row);
+                cursor: pointer;
+                &--text{
+                    @include marpad(0, 0 5px 0 0);
+                    @include texts(4vw, 600, rgba(255, 251, 252));
+                }
+                &--img{
+                    @include wid(4vw);
+                    color: map-get($map: $paleta, $key: cinco);
+                }
+                &:hover{
+                    & h4{
+                        color: map-get($map: $paleta, $key: dos);
+                    }
+                    & svg{
+                        color: map-get($map: $paleta, $key:  dos);
+                    }
+                }
+            }
+        }
+        &__section{
+            @include mar(0 20px 20px 20px);
+            @include display(flex);
+            @include flex( col);
+            background-color: map-get($map: $paleta, $key: cinco);
+            border-radius: 15px;
+            &--ul{
+                @include marpad(0,0);
+                @include display (flex);
+                @include flex (col);
+                list-style: none;
+                border-radius: 15px;
+                &--li{
+                    @include wid(100%);
+                    border-bottom: 2px solid rgb(185, 185, 185);
+                    background-color: map-get($map: $paleta, $key: cinco);
+                    &:hover{
+                        background-color: map-get($map: $paleta, $key: quince);
+                    }
+                    &:active{
+                        & img{
+                            background-color: map-get($map: $paleta, $key: dieciseis);
+                        }
+                        & h2{
+                            @include pad(5px 5px 0 5px);
+                            @include fs(250%);
+                        }
+                        & h4{
+                            @include pad(5px 5px 0 5px);
+                            @include fs(150%);
+                        }
+                    }
+                    &--a{
+                        @include wid(100%);
+                        align-items:  center;
+                        @include display(flex);
+                        @include flex(row);
+                        text-decoration: none;
+                        &--div{
+                            @include hei(100%);
+                            @include pad(20px);
+                            text-align:center;
+                            &--product-name{
+                                @include texts(7vw, 300, rgba(68, 133, 136));
+                                @include marpad(0, 5px);
+                            }
+                        }
+                        &--product-price{
+                            @include texts(4vw, 800, rgba(55, 106, 109));
+                            @include marpad(0, 5px);
+                        }
+                        &--img{
+                            @include wid(40%);
+                            @include pad(0 20px 0 0);
+                            background-color: map-get($map: $paleta, $key: cinco);
+                        }
+                    }
+                }
+            }
+            &--button-mas{
+                @include fs(4vw);
+                @include marpad(0, 5px);
+                background-color: map-get($map: $paleta, $key: cinco);
+                border: 0;
+                border-radius: 0 0 15px 15px;
+                &:hover{
+                    background-color: map-get($map: $paleta, $key: quince);
+                    color: map-get($map: $paleta, $key: dos);
+                }
+                &:active{
+                    text-decoration: underline;
+                }
+            }
+        }
+        .first-product-li{
+            border-radius: 15px 15px 0 0;
+            & img{
+                border-radius: 15px 0 0 0;
+            }
+        }
+    }
+
+@media (min-width:576px){
+    
+}
 
 @media (min-width:992px){
 /* ----------------PRODUCTOS=START----------------- */
