--- a/views/novedades/novedades.html
+++ b/views/novedades/novedades.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../../imagenes/g.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../../css/main.css">
     <title>Novedades</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
                     </svg>
                 </a>
                 <button class="navbar-toggler outline-none p-0 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <svg class="header__first--nav-supupup--list bi bi-list" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                    <svg class="header__first--nav-sup--list bi bi-list" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                     </svg>
                 </button>
@@ -43,7 +43,8 @@
                 <div class="nav__log nav-item col-sm-12 col-lg-3" id="AccederItem">
                     <a class="nav__log--login" href="#">
                         <button class="nav__log--login--button">
-                            <img class="nav__log--login--button--img1" src="../../imagenes/user2_1.png" alt="logo de usuario">
+                            <img class="nav__log--login--button--img1" src="../../imagenes/profile-icon.png" alt="logo de usuario">
+                            <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario">
                             <span class="nav__log--login--button--span1">Acceder</span>
                         </button>
                     </a>
@@ -85,11 +86,11 @@
                 </ul>
                 <!-- NAV-subpaginas = START -->
                 <div class="nav__text">
-                    <ul class="nav__text__ul m-0 p-0">
-                        <li class="nav__text__ul--subpages-text-only" id="NosotrosItem">
+                    <ul class="nav__text--ul m-0 p-0">
+                        <li class="nav__text--ul--subpages-text-only" id="NosotrosItem">
                             <a href="../nosotros/nosotros.html">Nosotros</a>
                         </li>
-                        <li class="nav__texttt__ul--subpages-text-only" id="ContactanosItem">
+                        <li class="nav__text--ul--subpages-text-only" id="ContactanosItem">
                             <a href="#footer-nav">Contactanos</a>
                         </li>
                     </ul>
@@ -119,50 +120,58 @@
 <!-- MAIN-(novedades) = START -->
     <main class="main-novedades">
         <h1 class="page-main-text">Novedades</h1>
-        <div class="main-novedades__list-functions col-lg-10">
-            <h4 class="main-novedades__list-functions--text">Ordenar por</h4>
-            <svg class="main-novedades__list-functions--img" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z"/>
-            </svg>
+        <div class="main-novedades__list-functions col-11 col-lg-10">
+            <div class="main-novedades__list-functions--div">
+                <h4 class="main-novedades__list-functions--div--text">Ordenar por</h4>
+                <svg class="main-novedades__list-functions--div--img" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z"/>
+                </svg>
+            </div>
         </div>
         <!-- SECTION-(novedades) = START -->
-        <section class="main-novedades__section col-lg-10">
+        <section class="main-novedades__section col-11 col-lg-10">
             <ul class="main-novedades__section--ul">
                 <li class="main-novedades__section--ul--li first-novedades-li">
                     <a class="main-novedades__section--ul--li--a" href="#">
                         <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="foto del carrito">
                         <div class="main-novedades__section--ul--li--a--div">
                             <h2 class="main-novedades__section--ul--li--a--div--title">¡Tu pedido del carrito ya esta listo!</h2>
-                            <p class="main-productos__section--ul--li--a--desc">3 tarugos/b, 13 tornillos/c, 20 tornillos/e, tor...</p>
+                            <p class="main-novedades__section--ul--li--a--div--desc">3 tarugos/b, 13 tornillos/c, 20 tornillos/e, tor...</p>
                         </div>
                     </a>
-                    <svg class="main-novedades__section--ul--li--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
-                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-                    </svg>
+                    <div class="main-novedades__section--ul--li--x">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                        </svg>
+                    </div>
                 </li>
                 <li class="main-novedades__section--ul--li">
                     <a class="main-novedades__section--ul--li--a" href="#">
                         <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="Foto de producto nuevo">
                         <div class="main-novedades__section--ul--li--a--div">
                             <h2 class="main-novedades__section--ul--li--a--div--title">¡Nuevo producto disponible!</h2>
-                            <p class="main-productos__section--ul--li--a--desc">Nuevos tornillos marca T1 punta aguja para...</p>
+                            <p class="main-novedades__section--ul--li--a--div--desc">Nuevos tornillos marca T1 punta aguja para...</p>
                         </div>
                     </a>
-                    <svg class="main-novedades__section--ul--li--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
-                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-                    </svg>
+                    <div class="main-novedades__section--ul--li--x">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                        </svg>
+                    </div>
                 </li>
                 <li class="main-novedades__section--ul--li last-novedades-li">
                     <a class="main-novedades__section--ul--li--a" href="#">
                         <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="Foto ofertas">
                         <div class="main-novedades__section--ul--li--a--div">
                             <h2 class="main-novedades__section--ul--li--a--div--title">¡Ofertas exclusivas de verano!</h2>
-                            <p class="main-productos__section--ul--li--a--desc">Aprovecha el descuento en toda la linea T3, T4...</p>
+                            <p class="main-novedades__section--ul--li--a--div--desc">Aprovecha el descuento en toda la linea T3, T4...</p>
                         </div>
                     </a>
-                    <svg class="main-novedades__section--ul--li--svg" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
-                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-                    </svg>
+                    <div class="main-novedades__section--ul--li--x">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                        </svg>
+                    </div>
                 </li>
             </ul>
         </section>
