--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -17,4 +17,5 @@ $paleta:(
     "catorce": rgb(220, 220, 220),
     "quince": rgb(240, 240, 240),
     "dieciseis": rgb(229, 229, 229),
+    "diecisiete": rgb(34, 66, 68),
 );
