--- a/views/novedades/novedades.html
+++ b/views/novedades/novedades.html
@@ -15,7 +15,7 @@
     <header class="header navbar navbar-expand-lg pt-0 pb-0 col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="header__first container-fluid p-0 col-12 col-lg-12">
             <!-- HEADER-logo = START -->
-            <div class="header__first--logot--logo col-6 col-lg-5 me-auto">
+            <div class="header__first--logo col-6 col-lg-5 me-auto">
                 <a class="navbar-brand m-0 p-0" href="../../index.html">
                     <img class="header__first--logo--mini" src="../../imagenes/gborde.png" alt="logo chico">
                     <img class="header__first--logo--full" src="../../imagenes/full_logo.png" alt="logo grande">
@@ -36,7 +36,7 @@
                 </button>
             </div>
             <!-- HEADER-sup = END -->
-<!-- NAV = START -->
+    <!-- NAV = START -->
             <nav class="nav collapse navbar-collapse col-12 col-lg-4" id="navbarNav">
             <!-- NAV-items = START -->
                 <!-- NAV-login = START -->
@@ -98,8 +98,8 @@
                 <!-- NAV-subpaginas = END -->
             <!-- NAV-items = END -->
             </nav>
+            <!-- NAV = END  -->
         </div>
-        <!-- NAV = END  -->
         <!-- HEADER-subpaginas-desktop = START -->
         <div class="header__desktop-subpages col-lg-12">
             <ul class="header__desktop-subpages__ul">
