--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ html {
 /* HEIGHT */
 /* POSITIONS */
 /* LISTAS */
+/* ----------------ALL-PAGES=START----------------- */
 .header {
   width: 100%;
   height: auto;
@@ -357,6 +358,7 @@ html {
 .footer textarea {
   height: 15vh;
   resize: none;
+  overflow: scroll;
 }
 .footer input[type=submit] {
   width: 100%;
@@ -434,8 +436,8 @@ html {
   color: rgb(114, 114, 114);
 }
 
+/* ---------BREAKPOINT-MOBILE-ALL = START--------- */
 @media (min-width: 576px) {
-  /* ALL-PAGES = START */
   .header__first--nav-sup--lupa-1 {
     width: 8vw;
     height: auto;
@@ -484,10 +486,10 @@ html {
   input[type=submit] {
     font-size: 5vw;
   }
-  /* ALL-PAGES = END */
 }
+/* ---------BREAKPOINT-MOBILE-ALL = END--------- */
+/* ---------BREAKPOINT-TABLET-ALL = START--------- */
 @media (min-width: 768px) {
-  /* ALL-PAGES = START */
   .header__first--logo--mini {
     display: none;
   }
@@ -558,10 +560,10 @@ html {
   input[type=submit] {
     font-size: 4vw;
   }
-  /* ALL-PAGES = END */
 }
+/* ---------BREAKPOINT-TABLET-ALL = END--------- */
+/* ---------BREAKPOINT-DESKTOP-ALL = START--------- */
 @media (min-width: 992px) {
-  /* ALL-PAGES = START */
   .header {
     display: flex;
     flex-direction: column;
@@ -720,8 +722,10 @@ html {
   .footer input[type=submit] {
     font-size: 22px;
   }
-  /* ALL-PAGES = END */
 }
+/* ---------BREAKPOINT-DESKTOP-ALL = END--------- */
+/* ----------------ALL-PAGES=END----------------- */
+/* ----------------INDEX=START----------------- */
 .main-index {
   width: 100vw;
   height: 100vh;
@@ -844,8 +848,8 @@ html {
   text-decoration: underline;
 }
 
+/* ---------BREAKPOINT-MOBILE-IND = START--------- */
 @media (min-width: 576px) {
-  /* ----------------INDEX=START----------------- */
   .main-index__text h1 {
     font-size: 11vw;
   }
@@ -858,10 +862,10 @@ html {
   .section-1-index div a {
     font-size: 5.5vw;
   }
-  /* ----------------INDEX=END----------------- */
 }
+/* ---------BREAKPOINT-MOBILE-IND = END--------- */
+/* ---------BREAKPOINT-TABLET-IND = START--------- */
 @media (min-width: 768px) {
-  /* ----------------INDEX=START----------------- */
   .main-index__text h1 {
     font-size: 9.5vw;
   }
@@ -871,10 +875,10 @@ html {
   .section-1-index__article-1--figure--figcap {
     font-size: 4.5vw;
   }
-  /* ----------------INDEX=END----------------- */
 }
+/* ---------BREAKPOINT-TABLET-IND = END--------- */
+/* ---------BREAKPOINT-DESKTOP-IND = START--------- */
 @media (min-width: 992px) {
-  /* ----------------INDEX=START----------------- */
   .main-index__text h1 {
     font-size: 5.5vw;
     font-weight: 800;
@@ -912,8 +916,9 @@ html {
   .section-1-index div a:hover {
     color: rgb(73, 73, 73);
   }
-  /* ----------------INDEX=END----------------- */
 }
+/* ---------BREAKPOINT-DESKTOP-IND = END--------- */
+/* ----------------INDEX=END----------------- */
 /* ----------------PRODUCTOS=START----------------- */
 .main-productos {
   justify-content: center;
@@ -981,11 +986,11 @@ html {
 }
 .main-productos__section--ul--li:active h2 {
   padding: 5px 5px 0 5px;
-  font-size: 250%;
+  font-size: 7.3vw;
 }
 .main-productos__section--ul--li:active h4 {
   padding: 5px 5px 0 5px;
-  font-size: 150%;
+  font-size: 4.5vw;
 }
 .main-productos__section--ul--li--a {
   width: 100%;
@@ -1212,7 +1217,6 @@ html {
   height: 100%;
   justify-content: center;
   align-items: start;
-  padding: 10px;
   display: flex;
   flex-direction: column;
   text-align: start;
@@ -1222,7 +1226,7 @@ html {
   font-weight: 800;
   color: rgb(55, 106, 109);
   margin: 0;
-  padding: 5px;
+  padding: 15px 15px 0 15px;
   text-align: start;
 }
 .main-novedades__section--ul--li--a--div--desc {
@@ -1230,7 +1234,7 @@ html {
   font-weight: 300;
   color: rgb(68, 133, 136);
   margin: 0;
-  padding: 5px;
+  padding: 0 15px 15px 15px;
 }
 .main-novedades__section--ul--li--a--img {
   width: 30%;
@@ -1333,12 +1337,12 @@ html {
 /* ---------BREAKPOINT-DESKTOP-NOV = START--------- */
 @media (min-width: 992px) {
   .main-novedades__list-functions--div--text {
-    font-size: 1.5vw;
+    font-size: 1.4vw;
     font-weight: 600;
     color: rgb(255, 251, 252);
   }
   .main-novedades__list-functions--div--img {
-    width: 1.5vw;
+    width: 1.4vw;
   }
   .main-novedades__section--ul--li--a:active h2 {
     font-size: 2.6vw;
@@ -1348,24 +1352,169 @@ html {
   }
   .main-novedades__section--ul--li--a--div--title {
     font-size: 2.5vw;
-    font-weight: 800;
+    font-weight: 600;
     color: rgb(55, 106, 109);
   }
   .main-novedades__section--ul--li--a--div--desc {
-    font-size: 1.7vw;
+    font-size: 1.5vw;
     font-weight: 300;
     color: rgb(68, 133, 136);
   }
   .main-novedades__section--ul--li--a--img {
-    width: 20%;
+    width: 15%;
     height: auto;
   }
   .main-novedades__section--ul--li--x svg {
     width: 5vw;
   }
 }
-/* ---------BREAKPOINT-DESKTOP-NOV = START--------- */
+/* ---------BREAKPOINT-DESKTOP-NOV = END--------- */
 /* ----------------NOVEDADES=END----------------- */
+/* ----------------CARRITO=START----------------- */
+.main-carrito {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(220, 220, 220);
+  overflow: hidden;
+}
+.main-carrito__list-functions {
+  justify-content: start;
+  display: flex;
+  flex-direction: row;
+}
+.main-carrito__list-functions--div {
+  justify-content: center;
+  align-items: center;
+  margin: 0 30px 5px 0;
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+}
+.main-carrito__list-functions--div--text {
+  margin: 0;
+  padding: 0 5px 0 0;
+  font-size: 4vw;
+  font-weight: 600;
+  color: rgb(255, 251, 252);
+}
+.main-carrito__list-functions--div--img {
+  width: 4vw;
+  color: rgb(255, 251, 252);
+}
+.main-carrito__list-functions--div:hover h4 {
+  color: rgb(55, 106, 109);
+}
+.main-carrito__list-functions--div:hover svg {
+  color: rgb(55, 106, 109);
+}
+.main-carrito__section {
+  margin: 0 20px 0px 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(255, 251, 252);
+  border-radius: 15px;
+}
+.main-carrito__section--ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  border-radius: 15px;
+}
+.main-carrito__section--ul--li {
+  width: auto;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  border-bottom: 2px solid rgb(185, 185, 185);
+  background-color: rgb(255, 251, 252);
+}
+.main-carrito__section--ul--li:hover {
+  background-color: rgb(240, 240, 240);
+}
+.main-carrito__section--ul--li--a {
+  width: auto;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+}
+.main-carrito__section--ul--li--a:hover {
+  background-color: rgb(240, 240, 240);
+  border-radius: 15px 15px 15px 15px;
+}
+.main-carrito__section--ul--li--a:active img {
+  height: auto;
+  background-color: rgb(229, 229, 229);
+}
+.main-carrito__section--ul--li--a:active h2 {
+  padding: 5px 5px 0 5px;
+  font-size: 4.8vw;
+}
+.main-carrito__section--ul--li--a--text {
+  font-size: 4.5vw;
+  font-weight: 500;
+  color: rgb(55, 106, 109);
+  margin: 0;
+  padding: 5px;
+  text-align: start;
+}
+.main-carrito__section--ul--li--a--img {
+  width: 30%;
+  height: auto;
+  padding: 0 10px 0 0;
+  background-color: rgb(255, 251, 252);
+}
+.main-carrito__section--ul--li--delete {
+  height: auto;
+  padding: 10px 10px 0 0;
+}
+.main-carrito__section--ul--li--delete svg {
+  width: 6vw;
+  cursor: pointer;
+}
+.main-carrito__section--ul--li--delete svg:hover path {
+  color: rgb(55, 106, 109);
+}
+.main-carrito__section--ul--li--delete svg:active path {
+  transform: scale(1.07);
+}
+.main-carrito__section--ul--li--delete svg path {
+  color: rgb(28, 55, 56);
+}
+.main-carrito__section--button-carrito {
+  font-size: 4vw;
+  margin: 10px;
+  padding: 5px;
+  color: rgb(255, 251, 252);
+  background-color: rgb(42, 82, 84);
+  border: 2px solid rgb(255, 251, 252);
+  border-radius: 15px 15px 15px 15px;
+}
+.main-carrito__section--button-carrito:hover {
+  background-color: rgb(34, 66, 68);
+}
+.main-carrito__section--button-carrito:active {
+  text-decoration: underline;
+}
+.main-carrito .first-carrito-li {
+  border-radius: 15px 15px 0 0;
+}
+.main-carrito .first-carrito-li img {
+  border-radius: 15px 0 0 0;
+}
+.main-carrito .last-carrito-li {
+  border-radius: 0 0 15px 15px;
+  border: none;
+}
+.main-carrito .last-carrito-li img {
+  border-radius: 0 0 0 15px;
+}
+
+/* ---------------NOSOTROS=START----------------- */
 .main-nosotros {
   justify-content: center;
   align-items: center;
@@ -1443,15 +1592,15 @@ html {
   color: rgb(114, 114, 114);
 }
 
+/* ---------BREAKPOINT-MOBILE-NOS = START--------- */
 @media (min-width: 576px) {
-  /* ----------------NOSOTROS=START----------------- */
   .page-main-text {
     font-size: 11vw;
   }
-  /* ----------------NOSOTROS=END----------------- */
 }
+/* ---------BREAKPOINT-MOBILE-NOS = END--------- */
+/* ---------BREAKPOINT-TABLET-NOS = START--------- */
 @media (min-width: 768px) {
-  /* ----------------NOSOTROS=START----------------- */
   .page-main-text {
     font-size: 10vw;
   }
@@ -1474,10 +1623,10 @@ html {
   .main-nosotros__founders--div--position {
     font-size: 3vw;
   }
-  /* ----------------NOSOTROS=END----------------- */
 }
+/* ---------BREAKPOINT-TABLET-NOS = END--------- */
+/* ---------BREAKPOINT-DESKTOP-NOS = START--------- */
 @media (min-width: 992px) {
-  /* ----------------NOSOTROS=START----------------- */
   .page-main-text {
     font-size: 4vw;
   }
@@ -1531,7 +1680,8 @@ html {
     margin: 0;
     padding: 0;
   }
-  /* ----------------NOSOTROS=END----------------- */
 }
+/* ---------BREAKPOINT-DESKTOP-NOS = END--------- */
+/* ---------------NOSOTROS=END----------------- */
 
 /*# sourceMappingURL=main.css.map */
