--- a/views/carrito/carrito.html
+++ b/views/carrito/carrito.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../../imagenes/g.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../../css/main.css">
     <title>Tu Carrito</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
                     </svg>
                 </a>
                 <button class="navbar-toggler outline-none p-0 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <svg class="header__first--nav-supupup--list bi bi-list" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                    <svg class="header__first--nav-sup--list bi bi-list" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                     </svg>
                 </button>
@@ -43,7 +43,8 @@
                 <div class="nav__log nav-item col-sm-12 col-lg-3" id="AccederItem">
                     <a class="nav__log--login" href="#">
                         <button class="nav__log--login--button">
-                            <img class="nav__log--login--button--img1" src="../../imagenes/user2_1.png" alt="logo de usuario">
+                            <img class="nav__log--login--button--img1" src="../../imagenes/profile-icon.png" alt="logo de usuario">
+                            <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario">
                             <span class="nav__log--login--button--span1">Acceder</span>
                         </button>
                     </a>
@@ -85,11 +86,11 @@
                 </ul>
                 <!-- NAV-subpaginas = START -->
                 <div class="nav__text">
-                    <ul class="nav__text__ul m-0 p-0">
-                        <li class="nav__text__ul--subpages-text-only" id="NosotrosItem">
+                    <ul class="nav__text--ul m-0 p-0">
+                        <li class="nav__text--ul--subpages-text-only" id="NosotrosItem">
                             <a href="../nosotros/nosotros.html">Nosotros</a>
                         </li>
-                        <li class="nav__texttt__ul--subpages-text-only" id="ContactanosItem">
+                        <li class="nav__text--ul--subpages-text-only" id="ContactanosItem">
                             <a href="#footer-nav">Contactanos</a>
                         </li>
                     </ul>
@@ -119,35 +120,53 @@
 <!-- MAIN-(carrito) = START -->
     <main class="main-carrito">
         <h1 class="page-main-text">Tu Carrito</h1>
-        <div class="main-carrito__list-functions col-lg-10">
-            <h4 class="main-carrito__list-functions--text">Ordenar por</h4>
-            <svg class="main-carrito__list-functions--img" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z"/>
-            </svg>
+        <div class="main-carrito__list-functions col-11 col-lg-10">
+            <div class="main-carrito__list-functions--div">
+                <h4 class="main-carrito__list-functions--div--text">Ordenar por</h4>
+                <svg class="main-carrito__list-functions--div--img" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z"/>
+                </svg>
+            </div>
         </div>
         <!-- SECTION-(carrito) = START -->
-        <section class="main-carrito__section col-lg-10">
-            <ul class="main-carrito__section__ul">
-                <li class="main-carrito__section__ul--li first-carrito-li">
+        <section class="main-carrito__section col-11 col-lg-10">
+            <ul class="main-carrito__section--ul">
+                <li class="main-carrito__section--ul--li first-carrito-li">
                     <a class="main-carrito__section--ul--li--a" href="#">
-                        <h2>Caja tornillo p/a 8 x 9/16 zincado</h2>
-                        <img src="../../imagenes/tornillo.png" alt="Foto producto 1">
+                        <img class="main-carrito__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="Foto producto 1">
+                        <h2 class="main-carrito__section--ul--li--a--text">Caja tornillo p/a 8 x 9/16 zincado</h2>
                     </a>
+                    <div class="main-carrito__section--ul--li--delete">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+                            <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+                        </svg>
+                    </div>
                 </li>
-                <li class="main-carrito__section__ul--li">
+                <li class="main-carrito__section--ul--li">
                     <a class="main-carrito__section--ul--li--a" href="#">
-                        <h2>Caja tornillo hexagonal 14 x 2 zincado</h2>
-                        <img src="../../imagenes/tornillo.png" alt="Foto producto 2">
+                        <img class="main-carrito__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="Foto producto 2">
+                        <h2 class="main-carrito__section--ul--li--a--text">Caja tornillo hexagonal 14 x 2 zincado</h2>
                     </a>
+                    <div class="main-carrito__section--ul--li--delete">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+                            <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+                        </svg>
+                    </div>
                 </li>
-                <li class="main-carrito__section__ul--li">
+                <li class="main-carrito__section--ul--li last-carrito-li">
                     <a class="main-carrito__section--ul--li--a" href="#">
-                        <h2>Estuche tornillo parker 6 x 1</h2>
-                        <img src="../../imagenes/tornillo.png" alt="Foto producto 3">
+                        <img class="main-carrito__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="Foto producto 3">
+                        <h2 class="main-carrito__section--ul--li--a--text">Estuche tornillo parker 6 x 1</h2>
                     </a>
+                    <div class="main-carrito__section--ul--li--delete">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+                            <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+                        </svg>
+                    </div>
                 </li>
             </ul>
         </section>
+        <button class="main-carrito__section--button-carrito col-11 col-lg-10" type="button">Comprar carrito</button>
         <!-- SECTION-(carrito) = END -->
     </main>
 <!-- MAIN-(carrito) = END -->
